# avoid-this-diagnosssss

./: README.md  app.py  mri_model.py  pyproject.toml
